--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Md Danish and I'm a <span class="typing-2"></span></div>
-                    <p>Innovative and results-oriented B.Tech graduate with a passion for software development and a proven track record of excellence in Java programing.Equipped with a solid foundation in technical skills,including Java,SQL,JavaScript,HTML and CSS,complimented by proficiency in frameworks such as Spring Boot and Tailwind CSS.Experienced with database management with MySQL.Skilled in developing user-friendly applications,exemplified by projects such as Movie Search App,Quiz Master and Password Generator.Seeking opportunities to leverage my skills and contribute to innovative projects in the software development industry.</p>
+                    <p>Innovative and results-oriented B.Tech graduate with a passion for software development and a proven track record of excellence in JavaScript programing.Equipped with a solid foundation in technical skills,including ReactJS,Java,SQL,JavaScript,Tailwind CSS,HTML and CSS,complimented by proficiency in frameworks such as Spring Boot and Tailwind CSS.Experienced with database management with MySQL.Skilled in developing user-friendly applications,exemplified by projects such as Movie Search App,Quiz Master and Password Generator.Seeking opportunities to leverage my skills and contribute to innovative projects in the software development industry.</p>
                     <a href="https://1drv.ms/b/s!AioOd85jDD8cpgxohws292oE_2sS?e=mBzAuG" target="_blank">Download RESUME</a>
                 </div>
             </div>
@@ -85,9 +85,16 @@
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>ReactJS</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line react"></div>
                     </div>
                     
                     <div class="bars">
@@ -113,6 +120,13 @@
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>Tailwind CSS</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line tailwind"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>HTML</span>
                             <span>90%</span>
                         </div>
@@ -121,14 +135,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>80%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>GIT</span>
-                            <span>90%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line sql"></div>
                     </div>
