--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
         </div>
     </section>
 
+<!-- Projects Section -->
+<!-- Projects Section -->
+<section id="projects" class="projects">
+    <h2>My Projects</h2>
+    <div class="project-container">
+        <div class="project-card">
+            <h3>Advanced To-Do App</h3>
+            <p>A task management application featuring priorities and weather integration, built with React, Redux, and JavaScript.</p>
+            <a href="https://to-do-reduxt.netlify.app" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Currency Converter</h3>
+            <p>A simple yet powerful web application to convert currencies with real-time exchange rates, built with React and JavaScript. </p>
+            <a href="https://mddanish11.github.io/currency-convertor-react/" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Brain Buster Challenge</h3> <!-- Updated name -->
+            <p>A fun web-based game that challenges users with a series of quizzes. Users can track their high scores, making it engaging and competitive.</p>
+            <a href="https://quiz39.netlify.app" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Weather App</h3>
+            <p>A weather application that provides real-time updates based on geolocation..</p>
+            <a href="https://smart-weather-info.netlify.app" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Drawing App</h3>
+            <p>An interactive drawing application with various tools for creating art.</p>
+            <a href=" https://mddanish11.github.io/drawing-app/" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Notes App</h3>
+            <p>A simple yet powerful note-taking app to organize thoughts and tasks.</p>
+            <a href="https://mddanish11.github.io/notes-app/" target="_blank" class="btn">View Project</a>
+        </div>
+        <div class="project-card">
+            <h3>Drink Water Reminder</h3>
+            <p>An intuitive app designed to help users stay hydrated.</p>
+            <a href="https://mddanish11.github.io/drink-water/" target="_blank" class="btn">View Project</a>
+        </div>
+    </div>
+</section>
+
+
    
     <!-- skills section start -->
     <section class="skills" id="skills">
