--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Danzfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -55,7 +56,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Md Danish and I'm a <span class="typing-2"></span></div>
-                    <p>Innovative and results-oriented B.Tech graduate with a passion for software development and a proven track record of excellence in JavaScript programing.Equipped with a solid foundation in technical skills,including ReactJS,Java,SQL,JavaScript,Tailwind CSS,HTML and CSS,complimented by proficiency in frameworks such as Spring Boot and Tailwind CSS.Experienced with database management with MySQL.Skilled in developing user-friendly applications,exemplified by projects such as Movie Search App,Quiz Master and Password Generator.Seeking opportunities to leverage my skills and contribute to innovative projects in the software development industry.</p>
+                    <p>Innovative and results-oriented B.Tech graduate with a passion for software development and a proven track record of excellence in JavaScript programing.Equipped with a solid foundation in technical skills,including ReactJS,Redux,Java,SQL,JavaScript,Tailwind CSS,HTML and CSS,complimented by proficiency in frameworks such as Spring Boot and Tailwind CSS. Experienced with database management with MySQL. Skilled in developing user-friendly applications,exemplified by projects such as Advanced To Do applcation,BrainBuster Challenge and Currency Converter. Seeking opportunities to leverage my skills and contribute to innovative projects in the software development industry.</p>
                     <a href="https://1drv.ms/b/s!AioOd85jDD8cpgxohws292oE_2sS?e=mBzAuG" target="_blank">Download RESUME</a>
                 </div>
             </div>
@@ -108,7 +109,7 @@
 
    
     <!-- skills section start -->
-    <section class="skills" id="skills">
+    <!-- <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
@@ -193,9 +194,58 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    
+    <!-- Skills Section -->
+<section id="skills" class="skills">
+    <h2>My Skills</h2>
+    <div class="skills-container">
+        <!-- HTML5 -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" title="HTML5">
+        </div>
+        <!-- CSS3 -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" title="CSS3">
+        </div>
+        <!-- JavaScript -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" title="JavaScript">
+        </div>
+        <!-- React -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" title="React">
+        </div>
+        <!-- Redux -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" alt="Redux" title="Redux">
+        </div>
+        <!-- Tailwind CSS -->
+        <div class="skill">
+            <img src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg" alt="Tailwind CSS" title="Tailwind CSS">
+        </div>
+        <!-- Java -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java" title="Java">
+        </div>
+        <!-- Git -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git">
+        </div>
+        <!-- GitHub -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" title="GitHub">
+        </div>
+        <!-- SQL -->
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" title="SQL">
+        </div>
+        <!-- Data Structures and Algorithms (LeetCode logo) -->
+        <!-- <div class="skill">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="Data Structures and Algorithms" title="Data Structures and Algorithms">
+        </div> -->
+    </div>
+</section>
 
     <!-- contact section start -->
     <section class="contact" id="contact">
