--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">hussaindanish466@gmail.com</div>
+                                <div class="sub-title">mddanishx9@gmail.com</div>
                             </div>
                         </div>
                     </div>
